--- a/src/main/resources/templates/jenkins-publish-job.vm
+++ b/src/main/resources/templates/jenkins-publish-job.vm
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <project>
-    <description>Publish build created by Gerrit-CI plugin for project: TODO</description>
+    <description>Publish build created by Gerrit-CI plugin for project: $projectName</description>
 
     <actions />
     <properties />
@@ -89,8 +89,8 @@
                     <pattern>TODO</pattern>
                     <branches>
                         <com.sonyericsson.hudson.plugins.gerrit.trigger.hudsontrigger.data.Branch>
-                            <compareType>ANT</compareType>
-                            <pattern>TODO</pattern>
+                            <compareType>REG_EXP</compareType>
+                            <pattern>$publishBranchRegex</pattern>
                         </com.sonyericsson.hudson.plugins.gerrit.trigger.hudsontrigger.data.Branch>
                     </branches>
                 </com.sonyericsson.hudson.plugins.gerrit.trigger.hudsontrigger.data.GerritProject>
