Extract repository URL information from gerrit.config.
Change-Id: Ia71437a7c3cc22ebb79294358d64e7d2b06429c0

--- a/src/main/resources/templates/jenkins-verify-job.vm
+++ b/src/main/resources/templates/jenkins-verify-job.vm
@@ -19,7 +19,7 @@
             <hudson.plugins.git.UserRemoteConfig>
                 <name>origin</name>
                 <refspec>+$GERRIT_REFSPEC:refs/heads/gerrit</refspec>
-                <url>ssh://jenkins@localhost:29418/${projectName}.git</url>
+                <url>ssh://${gerritUser}@${host}:${port}/${projectName}.git</url>
             </hudson.plugins.git.UserRemoteConfig>
         </userRemoteConfigs>
 
