--- a/src/main/resources/templates/jenkins-publish-job.vm
+++ b/src/main/resources/templates/jenkins-publish-job.vm
@@ -18,7 +18,7 @@
         <userRemoteConfigs>
             <hudson.plugins.git.UserRemoteConfig>
                 <name>origin</name>
-                <url>ssh://jenkins@localhost:29418/${projectName}.git</url>
+                <url>ssh://${gerritUser}@${host}:${port}/${projectName}.git</url>
             </hudson.plugins.git.UserRemoteConfig>
         </userRemoteConfigs>
 
