Allow custom commands for running jobs.
Change-Id: I5640eada8de73e60284cb765040eb9ad155a8c88

--- a/src/main/resources/templates/jenkins-publish-job.vm
+++ b/src/main/resources/templates/jenkins-publish-job.vm
@@ -115,7 +115,7 @@ date
 git reset --hard
 git clean -fdx
 
-./scripts/publish.sh
+${publishCommand}
             </command>
         </hudson.tasks.Shell>
     </builders>
