Add credentialsId parameter for newer Jenkins Git plugin.
Note: The entry for this in the Constants class will also eventually be
replaced by a setting in the global admin configuration page.

Change-Id: Ice6e202d8f393c4c440d0d83066c8a74ccad3bd6

--- a/src/main/resources/templates/jenkins-publish-job.vm
+++ b/src/main/resources/templates/jenkins-publish-job.vm
@@ -19,6 +19,7 @@
             <hudson.plugins.git.UserRemoteConfig>
                 <name>origin</name>
                 <url>ssh://${gerritUser}@${host}:${port}/${projectName}.git</url>
+                <credentialsId>${credentialsId}</credentialsId>
             </hudson.plugins.git.UserRemoteConfig>
         </userRemoteConfigs>
 
