Fix css global namespace bug.
Apparently, styles from css files loaded by any plugin are applied to
the entire site. So, random text boxes through Gerrit were showing up
with my custom styles. This commit will remove that problem as long as
each rule in the css file begins with ".gerrit-ci ".

Change-Id: Id09a4b8d4fddaed047e2b634993a67f86f0585ed

--- a/src/main/resources/static/projects/projects.css
+++ b/src/main/resources/static/projects/projects.css
@@ -1,28 +1,28 @@
-h2 {
+.gerrit-ci h2 {
     border-bottom: 2px solid;
 }
 
-h2.subsection {
+.gerrit-ci h2.subsection {
     margin-top: 0;
     border-bottom: none;
 }
 
-h3 {
+.gerrit-ci h3 {
     margin-top: 0px;
 }
 
-.gwt-TextBox {
+.gerrit-ci .gwt-TextBox {
     margin-left: 20px;
     width: 200px;
     height: 25px;
     border-radius: 3px;
 }
 
-.label {
+.gerrit-ci .label {
     font-weight: bold;
 }
 
-.description {
+.gerrit-ci .description {
     margin-top: 10px;
     margin-left: 20px;
     font-weight: lighter;
